--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2267,7 +2267,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "48cb61de",
+   "id": "262df9b4",
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "59e2f2cd",
+   "id": "e9274b87",
    "metadata": {},
    "outputs": [
     {
@@ -2318,7 +2318,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "ac0a924d",
+   "id": "3ed889e1",
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "2406eade",
+   "id": "a8bec2e1",
    "metadata": {},
    "outputs": [
     {
@@ -2366,7 +2366,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "aaba681f",
+   "id": "100e7b97",
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2390,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "66146410",
+   "id": "35f34405",
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d73101f5",
+   "id": "2030bfa2",
    "metadata": {},
    "outputs": [
     {
@@ -2438,7 +2438,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "291f6731",
+   "id": "452881f6",
    "metadata": {},
    "outputs": [
     {
@@ -2508,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "90a590f5",
+   "id": "8dff0528",
    "metadata": {},
    "outputs": [
     {
@@ -2547,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "2e199330",
+   "id": "b08c552b",
    "metadata": {},
    "outputs": [
     {
@@ -2677,7 +2677,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "e586dda7",
+   "id": "21a15539",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "21fc3409",
+   "id": "c0c0e4d2",
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "50ea9ea1",
+   "id": "7b11e3a5",
    "metadata": {},
    "outputs": [
     {
@@ -2792,7 +2792,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ef5af128",
+   "id": "28cdfd1c",
    "metadata": {},
    "outputs": [
     {
@@ -2831,7 +2831,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "c098af2e",
+   "id": "a6d9550a",
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2869,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "72392f2a",
+   "id": "13322d0f",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "91c907b9",
+   "id": "27bc3304",
    "metadata": {},
    "outputs": [
     {
@@ -3137,7 +3137,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "cc58777c",
+   "id": "0e9b0237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3150,7 +3150,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "63170484",
+   "id": "db8261e6",
    "metadata": {},
    "outputs": [
     {
@@ -3187,7 +3187,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "6426b955",
+   "id": "e211ac81",
    "metadata": {},
    "outputs": [
     {
@@ -3224,7 +3224,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "7d13f05e",
+   "id": "b5ff3d92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3237,7 +3237,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "50de7f76",
+   "id": "672d00dd",
    "metadata": {},
    "outputs": [
     {
@@ -3476,7 +3476,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "b8b03cc8",
+   "id": "bb828230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3489,7 +3489,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "89be46a0",
+   "id": "75062360",
    "metadata": {},
    "outputs": [
     {
@@ -3526,7 +3526,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b214b53d",
+   "id": "f529b864",
    "metadata": {},
    "outputs": [
     {
@@ -3563,7 +3563,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "be4a5a90",
+   "id": "dcb282ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3576,7 +3576,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "7ac87b1c",
+   "id": "247739dd",
    "metadata": {},
    "outputs": [
     {
@@ -3612,7 +3612,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "e6925785",
+   "id": "f9f1e05a",
    "metadata": {},
    "outputs": [
     {
@@ -3648,7 +3648,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "f2715a03",
+   "id": "6bdf3a5f",
    "metadata": {},
    "outputs": [
     {
@@ -3791,7 +3791,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "2cf02b65",
+   "id": "77f4c6cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3802,7 +3802,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "16d1db56",
+   "id": "2d31bf0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3813,7 +3813,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "a0d27f7c",
+   "id": "823588f7",
    "metadata": {},
    "outputs": [
     {
@@ -3849,7 +3849,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "ec993125",
+   "id": "156af2c4",
    "metadata": {},
    "outputs": [
     {
@@ -4003,7 +4003,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "34fd43f3",
+   "id": "bade1289",
    "metadata": {},
    "outputs": [
     {
@@ -4151,8 +4151,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "id": "798da2e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "ca8b8b0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cbff3915",
+   "id": "24ee2606",
    "metadata": {},
    "outputs": [],
    "source": []
