--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2267,7 +2267,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "a4ff87ce",
+   "id": "ae97b63b",
    "metadata": {},
    "outputs": [
     {
@@ -2292,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d0570cfd",
+   "id": "9b7e6dd1",
    "metadata": {},
    "outputs": [
     {
@@ -2318,7 +2318,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "4d581003",
+   "id": "a6cff363",
    "metadata": {},
    "outputs": [
     {
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "3e8e5cba",
+   "id": "a7164b3d",
    "metadata": {},
    "outputs": [
     {
@@ -2366,7 +2366,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "06e54a89",
+   "id": "f4dd95d1",
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2390,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "e23ea378",
+   "id": "03183025",
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d92f53e4",
+   "id": "073b0c75",
    "metadata": {},
    "outputs": [
     {
@@ -2438,7 +2438,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "7b597dbf",
+   "id": "c9bb1103",
    "metadata": {},
    "outputs": [
     {
@@ -2508,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "e873d8c4",
+   "id": "48c305a5",
    "metadata": {},
    "outputs": [
     {
@@ -2547,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9ab60a5c",
+   "id": "511ce725",
    "metadata": {},
    "outputs": [
     {
@@ -2677,7 +2677,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7ba3a408",
+   "id": "94c993ac",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "480926c8",
+   "id": "cc3d3987",
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "f9d08151",
+   "id": "605a819f",
    "metadata": {},
    "outputs": [
     {
@@ -2792,7 +2792,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "43cf4803",
+   "id": "cc4def87",
    "metadata": {},
    "outputs": [
     {
@@ -2831,7 +2831,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "9ba4cf1e",
+   "id": "c9271cd5",
    "metadata": {},
    "outputs": [
     {
@@ -2869,7 +2869,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "31a93d99",
+   "id": "2289a694",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "0bbaa08a",
+   "id": "15c27e58",
    "metadata": {},
    "outputs": [
     {
@@ -3137,7 +3137,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "d92dae63",
+   "id": "7060025b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3150,7 +3150,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "3cdb9f3b",
+   "id": "414f59a0",
    "metadata": {},
    "outputs": [
     {
@@ -3187,7 +3187,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5c8757ac",
+   "id": "5a57e53a",
    "metadata": {},
    "outputs": [
     {
@@ -3224,7 +3224,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "0f194456",
+   "id": "9e7d7b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3237,7 +3237,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "21f4321c",
+   "id": "55d8010c",
    "metadata": {},
    "outputs": [
     {
@@ -3476,7 +3476,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "ecc80547",
+   "id": "e42159a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3489,7 +3489,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "32fc0aa5",
+   "id": "44b16464",
    "metadata": {},
    "outputs": [
     {
@@ -3526,7 +3526,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "9b10ee17",
+   "id": "15632467",
    "metadata": {},
    "outputs": [
     {
@@ -3563,7 +3563,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "f225c272",
+   "id": "7269f743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3576,7 +3576,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "27a44db5",
+   "id": "3f9b11a7",
    "metadata": {},
    "outputs": [
     {
@@ -3612,7 +3612,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "88e155d6",
+   "id": "c70f65c0",
    "metadata": {},
    "outputs": [
     {
@@ -3648,7 +3648,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "aee0b596",
+   "id": "33f5ef56",
    "metadata": {},
    "outputs": [
     {
@@ -3791,7 +3791,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "00df1136",
+   "id": "6eb3257c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3802,7 +3802,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e35ab64e",
+   "id": "1ca0c829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3813,7 +3813,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "d8233c36",
+   "id": "f6978afe",
    "metadata": {},
    "outputs": [
     {
@@ -3849,7 +3849,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "9bdc411d",
+   "id": "76af089f",
    "metadata": {},
    "outputs": [
     {
@@ -4003,7 +4003,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "d1311271",
+   "id": "9f2f9870",
    "metadata": {},
    "outputs": [
     {
@@ -4152,7 +4152,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "8db1219e",
+   "id": "c1b0bc78",
    "metadata": {},
    "outputs": [
     {
@@ -4297,7 +4297,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "292ca80e",
+   "id": "0e6b6235",
    "metadata": {},
    "outputs": [
     {
@@ -4442,7 +4442,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "2b72a7b0",
+   "id": "ac8a062c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4459,7 +4459,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "945b55f9",
+   "id": "7d40f1e4",
    "metadata": {},
    "outputs": [
     {
@@ -4698,7 +4698,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "3eb1a3b8",
+   "id": "822dd0ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4715,7 +4715,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "fa05684a",
+   "id": "21248367",
    "metadata": {},
    "outputs": [
     {
@@ -4752,7 +4752,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "e147d6fc",
+   "id": "d76df64d",
    "metadata": {},
    "outputs": [
     {
@@ -4789,7 +4789,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "b6806980",
+   "id": "38d8269e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4806,7 +4806,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "ff89c7a4",
+   "id": "24761ff1",
    "metadata": {},
    "outputs": [
     {
@@ -4843,7 +4843,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "b10e2db9",
+   "id": "6486612d",
    "metadata": {},
    "outputs": [
     {
@@ -4880,7 +4880,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "cbe80093",
+   "id": "fa39c506",
    "metadata": {},
    "outputs": [
     {
@@ -4986,7 +4986,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "4e399bcb",
+   "id": "963663e8",
    "metadata": {},
    "outputs": [
     {
@@ -5092,7 +5092,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "f70cc32a",
+   "id": "0659236e",
    "metadata": {},
    "outputs": [
     {
@@ -5199,7 +5199,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "f36f1d34",
+   "id": "ddce5845",
    "metadata": {},
    "outputs": [
     {
@@ -5306,7 +5306,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "7e9582d4",
+   "id": "6a036470",
    "metadata": {},
    "outputs": [
     {
@@ -5336,7 +5336,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "d7fc0b0d",
+   "id": "f70318c9",
    "metadata": {},
    "outputs": [
     {
@@ -5375,7 +5375,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "084f4da0",
+   "id": "9b7b1429",
    "metadata": {},
    "outputs": [
     {
@@ -5414,7 +5414,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "e09291d2",
+   "id": "5f4f79d5",
    "metadata": {},
    "outputs": [
     {
@@ -5441,7 +5441,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "3a6d576b",
+   "id": "eceb7c80",
    "metadata": {},
    "outputs": [
     {
@@ -5468,7 +5468,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "6a9ea8c9",
+   "id": "0ba80f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5480,7 +5480,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "6eeeee43",
+   "id": "78d98ea1",
    "metadata": {},
    "outputs": [
     {
@@ -5818,7 +5818,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "9d126436",
+   "id": "6b7120ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5837,7 +5837,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "3d92b5eb",
+   "id": "3fb07ee3",
    "metadata": {},
    "outputs": [
     {
@@ -5863,7 +5863,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "c163847d",
+   "id": "ef9047ce",
    "metadata": {},
    "outputs": [
     {
@@ -5982,7 +5982,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "f8b87e51",
+   "id": "43af34ad",
    "metadata": {},
    "outputs": [
     {
@@ -6104,7 +6104,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "b6ce313c",
+   "id": "dd6b7b29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6116,7 +6116,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "0023e816",
+   "id": "7f1fe961",
    "metadata": {},
    "outputs": [
     {
@@ -6280,7 +6280,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "e47b55b8",
+   "id": "d1c39c5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6299,7 +6299,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "3e3f4cb4",
+   "id": "2eeb3342",
    "metadata": {},
    "outputs": [
     {
@@ -6401,7 +6401,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "ed0134e8",
+   "id": "e71eff04",
    "metadata": {},
    "outputs": [
     {
@@ -6505,8 +6505,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 140,
+   "id": "4a7b1df1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "ad4d90fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "e04bd495",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b6071cbe",
+   "id": "c4499590",
    "metadata": {},
    "outputs": [],
    "source": []
